--- a/dir-2/style.css
+++ b/dir-2/style.css
@@ -1,25 +1,96 @@
 @font-face{
-    font-family: "DellaRespira";
-    src: url("./fonts/DellaRespira-Regular.ttf") format('truetype');
-    font-weight: 100 900;
-    font-style: normal;
-}
-@font-face{
-    font-family: "Forum";
-    src: url("./fonts/Forum-Regular.ttf") format('truetype');
+    font-family: "DMSans";
+    src: url("./fonts/DMSans-VariableFont_opsz\,wght.ttf") format('truetype');
     font-weight: 100 900;
     font-style: normal;
 }
 
+:root{
+    
+    --light-gray:#BDB8B1;
+    --plum:#7d4960;
+    --dark-gray:#303041;
+    --off-white:#f4eded;
+    --cherry:#c75260;
+    --dark-cherry:#b87179;
+    --light-cherry:rgb(236, 181, 187);
+    
+}
+html{
+    background:var(--off-white);
+}
+body{
+    margin:1rem;
+}
+header{
+    padding:1.5rem 2rem;
+
+}
 
 h1{
-    font-family:"DellaRespira";
+    margin-block:5rem 3rem;
+
+    font-family:"DMSans";
+    font-weight:550;
     font-size: 2rem;
     line-height: 2rem;
     text-align: center;
+    color:var(--cherry);
+    
+    line-height: 2.5rem;
+
 }
+.og-text{
+    margin-block:4rem;
+    color:var(--plum);
+    
+
+}
+.og-text p{
+    text-align:center;
+    margin-block:1.5rem;
+    font-size:1.3rem;
+    letter-spacing: .5rem;
+    
+    font-weight:300;
+    line-height: .2rem;
+    
+}
+#og-date{
+    
+    /* font-weight:300; */
+    
+}
+.context{
+    color:var(--cherry);
+    border:1.5px dashed var(--cherry);
+    /* background:var(--dark-gray); */
+    padding:1.5rem 2rem;
+    border-radius:50px;
+    margin-inline:1rem;
+    text-align:center;
+    font-size:1rem;
+    line-height:1.4rem;
+}
+.context em{
+    font-style: italic;
+}
+
 p{
-    font-family:"Forum";
+    font-family:"DMSans";
     font-size: 1.1rem;
-    line-height: 1.4rem;
+    font-weight:400;
+    line-height: 1.7rem;
+    margin-block-end:2rem;
+    
 }
+.body-text{
+    border:4px dashed var(--light-cherry);
+    padding:2rem;
+    border-radius:40px;
+    margin:4rem 2rem;
+    color:var(--plum);
+    margin-inline:1rem;
+
+}
+
