--- a/dir-1/style.css
+++ b/dir-1/style.css
@@ -8,21 +8,20 @@
 
 :root{
     
-    --light-blue:#CAE8FF;
-    --light-teal:#c6f0f0;
-    --mid-blue:#68b4e3;
-    --mid-teal:#4ca1b7;
-    --dark-blue:#1C4964;
-    --dark-teal:#155157;
+    --sand:#F3E8E3;
+    --beige:#d5c2c8;
+    --taupe:#9B8B98;
+    --dark-taupe:#4A4E68;
+    --dark-purp:#1b1f52;
 }
 
 html{
-    background-color: var(--light-blue);
+    background-color: var(--sand);
 }
 
 
 header{
-    background-color: var(--dark-blue);
+    background-color: var(--taupe);
     padding:1rem;
     
     
@@ -39,16 +38,16 @@ main{
 h1{
     font-family:"Josefin";
     font-size: 2rem;
-    font-weight:500;
+    font-weight:700;
     line-height: 4rem;
     text-align: left;
-    color: var(--light-blue);
+    color: var(--sand);
     margin-block:7rem 3rem;
     line-height: 2.5rem;
     margin-inline:1.5rem;
     letter-spacing:-1px;
     padding:1.5rem 1.25rem;
-    border:6px solid var(--light-blue);
+    border:6px solid var(--sand);
     text-wrap:pretty;
     /* width:min-content; */
 }
@@ -64,27 +63,29 @@ p{
     /* background: var(--mid-blue); */
     margin-inline:1.5rem;
     margin-block-end:3rem;
-    border: 2px solid var(--dark-blue);
+    /* border: 2px solid var(--sand); */
+    display:grid;
+    grid-template-columns: 1fr 1fr;
     
 }
 .art-detail{
-    font-size: 1.2rem;
+    font-size: 1.5rem;
     text-align:left;
     /* margin-block:1rem;
     margin-inline:.5rem; */
     font-weight: 500;
     
-    color: var(--mid-teal);
+    color: var(--beige);
 
 }
 #og-author{
     margin-block-end:0;
-    text-align:center;
+    /* text-align:center; */
 }
 #og-date{
-    margin-block-start:0.25rem;
+    /* margin-block-start:0.25rem; */
     /* margin-block-end:2rem; */
-    text-align:center;
+    text-align:right;
     font-weight:400;
 }
 .context{
@@ -92,10 +93,10 @@ p{
     line-height:1.5rem;
     /* color: var(--mid-teal); */
     font-weight:350;
-    margin-inline:2rem;
+    margin-inline:2.2rem;
     margin-block:4rem;
     letter-spacing:-.5px;
-    color:var(--dark-blue);
+    color:var(--dark-taupe);
     text-align:center;
 
 }
@@ -107,8 +108,8 @@ p{
     margin:2rem;
 
     padding:2rem;
-    color:var(--light-blue);
-    background-color:var(--dark-blue);
+    color:var(--sand);
+    background-color:var(--dark-taupe);
 
 
 }
