updated format with two additional articles + changed font

--- a/article-1/style.css
+++ b/article-1/style.css
@@ -4,6 +4,12 @@
     font-weight: 100 900;
     font-style: normal;
 }
+@font-face{
+    font-family: "MonaSans";
+    src: url("./fonts/MonaSans-VariableFont_wdth,wght.ttf") format('truetype');
+    font-weight: 100 900;
+    font-style: normal;
+}
 
 :root{
     
@@ -16,7 +22,7 @@
 }
 
 html{
-    font-family:"Gabarito";
+    font-family:"MonaSans";
     background:var(--light-green)
 }
 header{
@@ -52,7 +58,7 @@ nav ul li{
 
 }
 nav a{
-    font-family:"Gabarito";
+    font-family:"MonaSans";
     color: var(--dark-green);
     font-weight:600;
     
