--- a/article-1/style.css
+++ b/article-1/style.css
@@ -121,3 +121,12 @@ article .pg{
     margin-block:3rem 2rem;
     margin-inline:1rem;
 }
+blockquote{
+    color:var(--darker-green);
+    font-weight:300;
+    font-size:2rem;
+    padding: 2rem 1.25rem;
+    background:var(--light-green);
+    line-height:2rem;
+    margin-block:3rem;
+}
