--- a/home.css
+++ b/home.css
@@ -4,37 +4,56 @@
     font-weight: 100 900;
     font-style: normal;
 }
+@font-face{
+    font-family: "MonaSans";
+    src: url("/home-fonts/MonaSans-VariableFont_wdth,wght.ttf") format('truetype');
+    font-weight: 100 900;
+    font-style: normal;
+}
+:root{
+    --off-white:#eef1eb;
+    --light-green:#c6e3c7;
+    --green:#87BBA1;
+    --dark-green:#47928b;
+    --darker-green:#1c6364;
+    --darkest-green:#162E30;
+    
+}
 html{
-    background:#ebedff;
+    background:var(--green);
 }
 
 header{
-    font-family:"Gabarito";
+    font-family:"MonaSans";
+    
     text-align:center;
 }
 h1{
     font-size:3.5rem;
     margin-block:2rem;
-    color:rgb(217, 140, 191);
+    color:var(--off-white);
     letter-spacing:.2ch;
-    font-weight:500;
+    font-weight:300;
 }
 h2{
     font-size:2rem;
     margin-block:2rem;
-    color:rgb(209, 178, 199);
+    color:var(--dark-green);
     letter-spacing:.2ch;
-    font-weight:500;
+    font-weight:600;
 }
 ul li{
     font-size:1.5rem;
     margin-block:1rem;
-    color:rgb(148, 77, 114);
-    letter-spacing:.5ch;
-    font-weight:700;
+    color:var(--off-white);
+    letter-spacing:.25ch;
+    font-weight:500;
+    padding:1rem;
+    background:var(--darker-green);
+    /* border:px solid var(--off-white); */
 }
 ul li:hover{
-    color:rgb(212, 83, 149);
+    color:var(--green);
     text-decoration:underline;
-    text-underline-offset: .5rem;
+    text-underline-offset: .25rem;
 }
