--- a/article-1/style.css
+++ b/article-1/style.css
@@ -1,12 +1,12 @@
 @font-face{
-    font-family: "Gabarito";
-    src: url("./fonts/Gabarito-VariableFont_wght.ttf") format('truetype');
+    font-family: "InSans";
+    src: url("./fonts/InstrumentSans-VariableFont_wdth,wght.ttf") format('truetype');
     font-weight: 100 900;
     font-style: normal;
 }
 @font-face{
-    font-family: "MonaSans";
-    src: url("./fonts/MonaSans-VariableFont_wdth,wght.ttf") format('truetype');
+    font-family: "InSerif";
+    src: url("./fonts/InstrumentSerif-Regular.ttf") format('truetype');
     font-weight: 100 900;
     font-style: normal;
 }
@@ -22,7 +22,7 @@
 }
 
 html{
-    font-family:"MonaSans";
+    font-family:"InSans";
     background:var(--off-white);
 }
 nav{
@@ -47,7 +47,7 @@ nav a{
     font-family:"MonaSans";
     color: var(--off-white);
     font-weight:500;
-    
+    font-size:1rem;
     
 }
 nav a:hover{
@@ -60,10 +60,10 @@ header{
     column-gap: .5rem; */
 }
 .title-sec{
-    display:flex;
-    flex-direction: row;
+    /* display:flex;
+    flex-direction: row; */
     margin-inline:1rem;
-    column-gap: .5rem;
+    column-gap: 1rem;
 }
 @media (width > 850px) {
     .title-sec{
@@ -76,10 +76,11 @@ header{
 
 h1{
     color:var(--dark-green);
-    font-size:2.7rem;
-    font-weight:400;
-    line-height:3rem;
-    margin-block-start:8rem;
+    font-size:3.5rem;
+    /* font-weight:800; */
+    line-height:4rem;
+    margin-block-start:5rem;
+    font-family: "InSerif";
 }
 @media (width > 850px) {
 	h1 {
@@ -88,18 +89,24 @@ h1{
         margin-inline: 2rem;
 	}
 }
+h1 span{
+    color:var(--darkest-green);
+    font-size:5rem;
+}
 
 
 
 .og-text{
-    margin-block-start:8.25rem;
+    margin-block-start:4rem;
+    /* margin-inline-end:1rem; */
 }
 
 .og-text p{
     color:var(--darker-green);
-    font-size:1.5rem;
-    font-weight:500;
-    line-height:1.7rem;
+    font-size:2rem;
+    font-weight:400;
+    letter-spacing:-.05ch;
+    line-height:2rem;
     margin-block-end:.3rem;
     text-align:right;
 }
@@ -114,8 +121,8 @@ h1{
 }
 .line{
     background:var(--green);
-    margin-block-start:8rem;
-    height:5rem;
+    margin-block-start:5rem;
+    height:4rem;
 
 }
 .dark-line{
@@ -144,13 +151,25 @@ article{
     line-height:1.75rem;
     color:var(--darkest-green);
     margin-block-end:10rem;
+    
 }
 article .pg{
     margin-block:3rem 2rem;
     margin-inline:1rem;
+    
+}
+.para{
+    margin-block-start:7rem;
 }
 .label {
-    display:none;
+    /* display:none; */
+    text-align:right;
+    margin-block: 3rem 1rem;
+    margin-inline-end:1rem;
+    font-size: 5rem;
+    font-weight:100;
+    color:var(--green);
+    
 }
 @media (width > 850px) {
     .label{
@@ -172,6 +191,13 @@ article .pg{
         grid-template-columns:1fr 5fr;
 	}
 }
+.pg em{
+    font-weight: 500;
+    font-style:italic;
+}
+mark{
+    background: var(--light-green);
+}
 blockquote{
     color:var(--darker-green);
     font-weight:300;
@@ -180,4 +206,13 @@ blockquote{
     background:var(--light-green);
     line-height:2rem;
     margin-block:3rem;
+}
+
+
+footer{
+    background:var(--darkest-green);
+    text-align:center;
+    color:var(--green);
+    font-size:1rem;
+    padding-block: 2rem;
 }
