--- a/article-3/style.css
+++ b/article-3/style.css
@@ -12,12 +12,12 @@
 }
 
 :root{
-    --off-white:#eef1eb;
-    --light-green:#c6e3c7;
-    --green:#87BBA1;
-    --dark-green:#47928b;
-    --darker-green:#1c6364;
-    --darkest-green:#162E30;
+    --off-white:#F2F4ED ;
+    --light-green:#D4E9F6;
+    --green:#879ABB;
+    --dark-green:#3A4F85;
+    --darker-green:#012B62;
+    --darkest-green:#161328;
     
 }
 
