--- a/article-3/style.css
+++ b/article-3/style.css
@@ -42,16 +42,22 @@ nav ul li{
     text-align: center;
 
 }
+#active-nav{
+    color: var(--off-white);
+}
+#active-nav:hover{
+    color: var(--green);
+}
 
 nav a{
     font-family:"InSans";
-    color: var(--off-white);
+    color: var(--green);
     font-weight:500;
     font-size:1rem;
     
 }
 nav a:hover{
-    color: var(--green);
+    color: var(--dark-green);
 }
 header{
     /* display:flex;
@@ -159,7 +165,7 @@ article{
 article .pg{
     margin-block:3rem 2rem;
     margin-inline:1rem;
-    
+    text-wrap:pretty;
 }
 .para{
     margin-block-start:7rem;
