--- a/home.css
+++ b/home.css
@@ -15,39 +15,59 @@
     --green:#87BBA1;
     --teal: #87AFBB;
     --blue:#879ABB;
-    --dark:#161328;
-    --light-gray:#B1B1B1;
-    --mid-gray:#909090;
-    --dark-gray:#727272;
-
-
-
+    --dark-green:#3A857D;
+    --dark-teal: #3A7485;
+    --dark-blue:#3A4F85;
     
+    --light-gray:#c4c4c4;
+    --mid-gray:#9c9c9c;
+    --dark-gray:#727272;
+    --darker-gray:#454545;
+    --dark:#161328;
+    
+
 }
 html{
     background:var(--off-white);
+    font-family:"InSans";
 }
 
 header{
     font-family:"InSans";
     
     text-align:center;
+    
 }
+
 h1{
     font-family:"InSerif";
-    font-size:6rem;
+    font-size:4rem;
     margin-block:2rem;
     color:var(--dark-gray);
+    margin-block-start:5rem;
+}
+h1 span{
+    color:var(--darker-gray);
+    font-size:5rem;
 }
 h2{
     font-size:2rem;
-    margin-block:2rem;
+    margin-block:2rem .5rem;
     color:var(--mid-gray);
-    letter-spacing:.25ch;
+    /* letter-spacing:.25ch; */
     font-weight:400;
 }
+h3{
+    font-size:1.5rem;
+    margin-block:0 3rem;
+    color:var(--light-gray);
+    letter-spacing:.2ch;
+    font-weight:400;
+    margin-block-end:5rem;
+}
+
 nav{
-    margin-block:0rem;
+    margin-block:3rem;
 }
 
 
@@ -55,13 +75,13 @@ ul li{
     font-size:1.5rem;
     /* margin-block:1rem; */
     color:var(--off-white);
-    letter-spacing:.25ch;
-    font-weight:500;
-    padding:1rem;
+    /* letter-spacing:.25ch; */
+    font-weight:400;
+    padding:2rem 1rem;
     /* border:px solid var(--off-white); */
 }
 ul li:hover{
-    color:var(--green);
+    /* color:var(--green); */
     /* text-decoration:underline; */
     text-underline-offset: .25rem;
     /* background:var(--off-white); */
@@ -69,9 +89,83 @@ ul li:hover{
 #art1-nav{
     background:var(--green);
 }
+#art1-nav:hover{
+    background:var(--dark-green);
+
+}
 #art2-nav{
     background:var(--teal);
+}
+#art2-nav:hover{
+    background:var(--dark-teal);
+
 }
 #art3-nav{
     background:var(--blue);
 }
+#art3-nav:hover{
+    background:var(--dark-blue);
+
+}
+
+main p{
+    margin-inline:1rem;
+}
+.intro{
+    margin-block:5rem 3rem;
+    text-align:left;
+
+}
+.intro p{
+
+    font-size:1.2rem;
+    line-height:1.5rem;
+    color:var(--dark-gray);
+    font-weight:500;
+    margin-block-end:1.5rem;
+    text-wrap:pretty;
+    
+}
+.colophon{
+    margin-block:3rem 5rem;
+    text-align:right;
+
+}
+.colophon p{
+
+    font-size:1rem;
+    line-height:1.2rem;
+    color:var(--mid-gray);
+    font-weight:400;
+    text-wrap:pretty;
+    
+}
+
+.line{
+    background:var(--dark-gray);
+    height:4rem;
+
+}
+.dark-line{
+    background:var(--darker-gray);
+    margin-block-start:0;
+    height:5rem;
+}
+#top-line{
+    margin:0;
+}
+
+footer{
+    background:var(--darker-gray);
+    text-align:center;
+    color:var(--off-white);
+    font-size:1rem;
+    letter-spacing:.25ch;
+}
+footer p{
+    padding-block: 2rem;
+
+}
+
+
+
