--- a/home.css
+++ b/home.css
@@ -45,22 +45,34 @@ h1{
     margin-block:2rem;
     color:var(--dark-gray);
     margin-block-start:5rem;
+    line-height:4rem;
+    margin-inline:1rem;
 }
 h1 span{
     color:var(--darker-gray);
     font-size:5rem;
 }
+@media (width > 850px) {
+	h1 {
+		font-size: 5rem;
+		line-height: 5rem;
+        margin-inline: 2rem;
+	}
+    h1 span{
+        font-size:6rem;
+    }
+}
 h2{
     font-size:2rem;
     margin-block:2rem .5rem;
-    color:var(--mid-gray);
+    color:var(--darker-gray);
     /* letter-spacing:.25ch; */
     font-weight:400;
 }
 h3{
     font-size:1.5rem;
     margin-block:0 3rem;
-    color:var(--light-gray);
+    color:var(--dark-gray);
     letter-spacing:.2ch;
     font-weight:400;
     margin-block-end:5rem;
@@ -68,6 +80,12 @@ h3{
 
 nav{
     margin-block:3rem;
+    background: var(--light-gray);
+    padding-block:3rem;
+}
+nav ul{
+    background: var(--darker-gray);
+    padding-block:4rem;
 }
 
 
@@ -114,7 +132,8 @@ main p{
 .intro{
     margin-block:5rem 3rem;
     text-align:left;
-
+    display:grid;
+    grid-template-columns:6fr .5fr;
 }
 .intro p{
 
@@ -129,6 +148,8 @@ main p{
 .colophon{
     margin-block:3rem 5rem;
     text-align:right;
+    display:grid;
+    grid-template-columns:.5fr 6fr;
 
 }
 .colophon p{
@@ -142,7 +163,7 @@ main p{
 }
 
 .line{
-    background:var(--dark-gray);
+    background:var(--light-gray);
     height:4rem;
 
 }
@@ -166,6 +187,5 @@ footer p{
     padding-block: 2rem;
 
 }
-
 
 
