--- a/article-2/style.css
+++ b/article-2/style.css
@@ -174,6 +174,7 @@ article .pg{
 }
 .label {
     /* display:none; */
+    font-family:"InSerif";
     text-align:right;
     margin-block: 3rem 1rem;
     margin-inline-end:1rem;
@@ -213,11 +214,16 @@ mark{
 blockquote{
     color:var(--darker-green);
     font-weight:300;
+    text-align:center;
     font-size:1.7rem;
     padding: 2rem 1.25rem;
     background:var(--light-green);
     line-height:2.2rem;
     margin-block:3rem;
+    margin-inline-start:0rem;
+    @media (width > 850px){
+        margin-inline-start:1rem;
+    }
 }
 
 
