--- a/home.css
+++ b/home.css
@@ -57,7 +57,10 @@ h1 span{
 		font-size: 5rem;
 		line-height: 5rem;
         margin-inline: 2rem;
-	}
+   
+	
+    }
+	
     h1 span{
         font-size:6rem;
     }
@@ -69,13 +72,23 @@ h2{
     /* letter-spacing:.25ch; */
     font-weight:400;
 }
+#intro-title{
+    text-align:center;
+    margin-block:6rem 3rem;
+}
+#intro-title span{
+    font-style:italic;
+    text-decoration:underline;
+    text-underline-offset: .25rem;
+    text-decoration-thickness: .1rem;
+}
 h3{
     font-size:1.5rem;
     margin-block:0 3rem;
     color:var(--dark-gray);
     letter-spacing:.2ch;
     font-weight:400;
-    margin-block-end:5rem;
+    margin-block-end:6rem;
 }
 
 nav{
@@ -130,7 +143,7 @@ main p{
     margin-inline:1rem;
 }
 .intro{
-    margin-block:5rem 3rem;
+    margin-block-end: 3rem;
     text-align:left;
     display:grid;
     grid-template-columns:6fr .5fr;
@@ -144,6 +157,19 @@ main p{
     margin-block-end:1.5rem;
     text-wrap:pretty;
     
+}
+@media (width > 850px) {
+    .intro{
+        display:grid;
+        grid-template-columns:1fr;
+    }
+    .intro-text{
+        display:grid;
+        grid-template-columns:1fr 1fr 1fr;    
+        column-gap:.5rem;
+        margin-inline: 3rem;
+        font-size:1.5rem;
+    }
 }
 .colophon{
     margin-block:3rem 5rem;
@@ -161,6 +187,22 @@ main p{
     text-wrap:pretty;
     
 }
+@media (width > 850px) {
+    .colophon{
+        display:grid;
+        grid-template-columns:1fr;
+        
+    }
+    .colophon p{
+        text-align: center;
+        font-size:1.2rem;
+        line-height:1.5rem;
+        margin-inline:20rem;
+        
+    }
+}
+
+
 
 .line{
     background:var(--light-gray);
