--- a/home.css
+++ b/home.css
@@ -24,6 +24,11 @@
     --dark-gray:#727272;
     --darker-gray:#454545;
     --dark:#161328;
+
+    /* geronimo words */
+    --orange:#df8734;
+    --yellow:#f1dd69;
+    --pink:#ee9cbe;
     
 
 }
@@ -41,12 +46,12 @@ header{
 
 h1{
     font-family:"InSerif";
-    font-size:4rem;
+    font-size:5rem;
     margin-block:2rem;
     color:var(--mid-gray);
-    margin-block-start:5rem;
-    line-height:4rem;
-    margin-inline:1rem;
+    margin-block:5rem;
+    line-height:4.5rem;
+    margin-inline:1.5rem;
 }
 h1 span{
     color:var(--darker-gray);
@@ -56,7 +61,7 @@ h1 span{
 	h1 {
 		font-size: 5rem;
 		line-height: 5rem;
-        margin-inline: 2rem;
+        margin-inline: 4rem;
    
 	
     }
@@ -66,33 +71,25 @@ h1 span{
     }
 }
 h2{
-    font-size:2rem;
-    margin-block:2rem .5rem;
+    font-size:1.5rem;
+    margin-block: .5rem;
+    margin-inline:2rem;
     color:var(--dark-gray);
     /* letter-spacing:.25ch; */
-    font-weight:400;
-}
-#intro-title{
-    text-align:center;
-    margin-block:6rem 3rem;
-}
-#intro-title span{
-    font-style:italic;
-    text-decoration:underline;
-    text-underline-offset: .25rem;
-    text-decoration-thickness: .1rem;
+    font-weight:200;
 }
 h3{
+    text-align:center;
+    margin-block:6rem 4rem;;
     font-size:2rem;
-    margin-block:0 3rem;
+    margin-inline:1rem;
     color:var(--dark-gray);
-    /* letter-spacing:.2ch; */
-    font-weight:400;
-    margin-block-end:6rem;
+    font-weight:500;
 }
 
+
 nav{
-    margin-block:3rem;
+    margin-block:3rem 10rem;
     /* background: var(--light-gray);
     padding-block:3rem; */
 }
@@ -103,39 +100,44 @@ nav ul{
 
 
 ul li{
-    font-size:1.5rem;
+    font-size:3rem;
+    font-family:"InSerif";
     /* margin-block:1rem; */
-    color:var(--off-white);
-    /* letter-spacing:.25ch; */
+   
     font-weight:400;
     padding:2rem 1rem;
-    /* border:px solid var(--off-white); */
+    letter-spacing: .1ch;
 }
 ul li:hover{
-    /* color:var(--green); */
-    /* text-decoration:underline; */
-    text-underline-offset: .25rem;
-    /* background:var(--off-white); */
+    text-transform: uppercase;
 }
+
 #art1-nav{
     background:var(--green);
+    color:var(--dark-green);
 }
 #art1-nav:hover{
     background:var(--dark-green);
+    color:var(--off-white);
 
 }
 #art2-nav{
     background:var(--teal);
+        color:var(--dark-teal);
+
 }
 #art2-nav:hover{
     background:var(--dark-teal);
+    color:var(--off-white);
 
 }
 #art3-nav{
     background:var(--blue);
+    color:var(--dark-blue);
 }
 #art3-nav:hover{
     background:var(--dark-blue);
+    color:var(--off-white);
 
 }
 
@@ -151,9 +153,9 @@ main p{
 .intro p{
 
     font-size:1.2rem;
-    line-height:1.5rem;
+    line-height:1.7rem;
     color:var(--dark-gray);
-    font-weight:500;
+    font-weight:300;
     margin-block-end:1.5rem;
     text-wrap:pretty;
     
@@ -162,27 +164,32 @@ main p{
     .intro{
         display:grid;
         grid-template-columns:1fr;
+        text-align: center;
     }
     .intro-text{
         display:grid;
         /* grid-template-columns:1fr 1fr 1fr;    
         column-gap:.5rem; */
-        margin-inline: 3rem;
+        margin-inline: 10rem;
+    
         font-size:1.5rem;
     }
 }
+
+
+
 .colophon{
     margin-block:3rem 5rem;
     text-align:right;
-    display:grid;
-    grid-template-columns:.5fr 6fr;
+    /* display:grid; */
+    /* grid-template-columns:1fr 6fr; */
 
 }
 .colophon p{
 
     font-size:1rem;
-    line-height:1.2rem;
-    color:var(--mid-gray);
+    line-height:1.5rem;
+    color:var(--dark-gray);
     font-weight:400;
     text-wrap:pretty;
     
@@ -201,6 +208,46 @@ main p{
         
     }
 }
+
+.slant{
+  display: inline-block;
+  font-weight: 300;
+  font-size: 1.3em;
+  /* color: var(--orange); */
+  transform: rotate(-1.5deg);
+}
+.slant2{
+  display: inline-block;
+  font-weight: 300;
+  font-size: 1.3em;
+  /* color: var(--orange); */
+  transform: rotate(1deg);
+}
+.geronimo{
+    display: inline-block;
+    font-family:"InSerif";
+    font-weight:900;
+    font-size: 1.25rem;
+    color:var(--orange);
+}
+.stroke {
+  color: var(--yellow);
+  -webkit-text-stroke: .5px #000;
+  font-weight: 500;
+}
+.shadow {
+  text-shadow: 2.2px 2.2px 0 #9c4f7b;
+  font-weight: 500;
+  font-size:2.1rem;
+  color:var(--pink);
+  letter-spacing:.07ch;
+}
+
+
+
+
+
+
 
 
 
@@ -223,10 +270,12 @@ footer{
     text-align:center;
     color:var(--off-white);
     font-size:1rem;
-    letter-spacing:.25ch;
+    /* letter-spacing:.25ch; */
+    
 }
 footer p{
     padding-block: 2rem;
+    margin-inline:2rem;
 
 }
 
